@@ -179,18 +179,18 @@ $skinNames = array(
 );
 
 $digitTransformTable = array(
-	'0' => '٠',
-	'1' => '١',
-	'2' => '٢',
-	'3' => '٣',
-	'4' => '٤',
-	'5' => '٥',
-	'6' => '٦',
-	'7' => '٧',
-	'8' => '٨',
-	'9' => '٩',
-	'.' => '٫', // wrong table?
-	',' => '٬'
+	'0' => '٠', # &#x0660;
+	'1' => '١', # &#x0661;
+	'2' => '٢', # &#x0662;
+	'3' => '٣', # &#x0663;
+	'4' => '٤', # &#x0664;
+	'5' => '٥', # &#x0665;
+	'6' => '٦', # &#x0666;
+	'7' => '٧', # &#x0667;
+	'8' => '٨', # &#x0668;
+	'9' => '٩', # &#x0669;
+	'.' => '٫', # &#x066b; wrong table ?
+	',' => '٬', # &#x066c;
 );
 
 $specialPageAliases = array(
