@@ -4,15 +4,15 @@
   */
 
 $digitTransformTable = array(
-	'0' => '૦',
-	'1' => '૧',
-	'2' => '૨',
-	'3' => '૩',
-	'4' => '૪',
-	'5' => '૫',
-	'6' => '૬',
-	'7' => '૭',
-	'8' => '૮',
-	'9' => '૯'
+	'0' => '૦', # &#x0ae6;
+	'1' => '૧', # &#x0ae7;
+	'2' => '૨', # &#x0ae8;
+	'3' => '૩', # &#x0ae9;
+	'4' => '૪', # &#x0aea;
+	'5' => '૫', # &#x0aeb;
+	'6' => '૬', # &#x0aec;
+	'7' => '૭', # &#x0aed;
+	'8' => '૮', # &#x0aee;
+	'9' => '૯', # &#x0aef;
 );
 ?>
