@@ -35,16 +35,16 @@ $namespaceNames = array(
 );
 
 $digitTransformTable = array(
-	'0' => '೦',
-	'1' => '೧',
-	'2' => '೨',
-	'3' => '೩',
-	'4' => '೪',
-	'5' => '೫',
-	'6' => '೬',
-	'7' => '೭',
-	'8' => '೮',
-	'9' => '೯'
+	'0' => '೦', # &#x0ce6;
+	'1' => '೧', # &#x0ce7;
+	'2' => '೨', # &#x0ce8;
+	'3' => '೩', # &#x0ce9;
+	'4' => '೪', # &#x0cea;
+	'5' => '೫', # &#x0ceb;
+	'6' => '೬', # &#x0cec;
+	'7' => '೭', # &#x0ced;
+	'8' => '೮', # &#x0cee;
+	'9' => '೯', # &#x0cef;
 );
 
 $messages = array(
