@@ -6,16 +6,16 @@
   * @author Ævar Arnfjörð Bjarmason <avarab@gmail.com>
   */
 $digitTransformTable = array(
-	'0' => '໐',
-	'1' => '໑',
-	'2' => '໒',
-	'3' => '໓',
-	'4' => '໔',
-	'5' => '໕',
-	'6' => '໖',
-	'7' => '໗',
-	'8' => '໘',
-	'9' => '໙'
+	'0' => '໐', # &#x0ed0;
+	'1' => '໑', # &#x0ed1;
+	'2' => '໒', # &#x0ed2;
+	'3' => '໓', # &#x0ed3;
+	'4' => '໔', # &#x0ed4;
+	'5' => '໕', # &#x0ed5;
+	'6' => '໖', # &#x0ed6;
+	'7' => '໗', # &#x0ed7;
+	'8' => '໘', # &#x0ed8;
+	'9' => '໙', # &#x0ed9;
 );
 
 ?>
