@@ -6,16 +6,16 @@
   * @author Ævar Arnfjörð Bjarmason <avarab@gmail.com>
   */
 $digitTransformTable = array(
-	'0' => '୦',
-	'1' => '୧',
-	'2' => '୨',
-	'3' => '୩',
-	'4' => '୪',
-	'5' => '୫',
-	'6' => '୬',
-	'7' => '୭',
-	'8' => '୮',
-	'9' => '୯',
+	'0' => '୦', # &#x0b66;
+	'1' => '୧', # &#x0b67;
+	'2' => '୨', # &#x0b68;
+	'3' => '୩', # &#x0b69;
+	'4' => '୪', # &#x0b6a;
+	'5' => '୫', # &#x0b6b;
+	'6' => '୬', # &#x0b6c;
+	'7' => '୭', # &#x0b6d;
+	'8' => '୮', # &#x0b6e;
+	'9' => '୯', # &#x0b6f;
 );
 
 ?>
