@@ -32,16 +32,16 @@ $namespaceNames = array(
 );
 
 $digitTransformTable = array(
-	'0' => '੦',
-	'1' => '੧',
-	'2' => '੨',
-	'3' => '੩',
-	'4' => '੪',
-	'5' => '੫',
-	'6' => '੬',
-	'7' => '੭',
-	'8' => '੮',
-	'9' => '੯'
+	'0' => '੦', # &#x0a66;
+	'1' => '੧', # &#x0a67;
+	'2' => '੨', # &#x0a68;
+	'3' => '੩', # &#x0a69;
+	'4' => '੪', # &#x0a6a;
+	'5' => '੫', # &#x0a6b;
+	'6' => '੬', # &#x0a6c;
+	'7' => '੭', # &#x0a6d;
+	'8' => '੮', # &#x0a6e;
+	'9' => '੯', # &#x0a6f;
 );
 $linkTrail = '/^([ਁਂਃਅਆਇਈਉਊਏਐਓਔਕਖਗਘਙਚਛਜਝਞਟਠਡਢਣਤਥਦਧਨਪਫਬਭਮਯਰਲਲ਼ਵਸ਼ਸਹ਼ਾਿੀੁੂੇੈੋੌ੍ਖ਼ਗ਼ਜ਼ੜਫ਼ੰੱੲੳa-z]+)(.*)$/sDu';
 
